added beginning of machine-description

--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -1,1 +1,23 @@
 \section{Machine Description}
+
+\subsection{Processor}
+
+    Processor: model, cycle time, cache sizes (L1, L2, instruction, data, etc.)
+\subsection{Motherboard buses}
+	Intel® Q67 Express Chipset
+    Memory bus
+    I/O bus
+
+\subsection{Ram}
+	16Go Physical
+    RAM size
+
+\subsection{Disk}
+	Software RAID 10 using mdadm + LVM
+    Disk: capacity, RPM, controller cache size
+
+\subsection{Network}
+    Network card speed
+
+\subsection{Operating System}
+    Operating system (including version/release) 
