some wrong LaTax added.
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -1,1 +1,11 @@
 \section{Machine Description}
+
+\begin{document}
+\ Processor: model, cycle time, cache sizes (L1, L2, instruction, data, etc.)
+\ Memory bus
+\ I/O bus
+\ RAM size
+\ Disk: capacity, RPM, controller cache size
+\ Network card speed
+\ Operating system (including version/release)
+\end{document}
