--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -4,7 +4,9 @@
 
     Processor: model, cycle time, cache sizes (L1, L2, instruction, data, etc.)
 \subsection{Motherboard buses}
-	Intel® Q67 Express Chipset
+Mother board is Intel DQ67OW
+\footnote{http://www.intel.com/content/www/us/en/motherboards/desktop-motherboards/desktop-board-dq67ow.html}
+Chipset is Intel® Q67 Express Chipset \footnote{http://www.intel.com/content/www/us/en/chipsets/mainstream-chipsets/q67-express-chipset.html}
     Memory bus
     I/O bus
 
@@ -14,10 +16,22 @@
 
 \subsection{Disk}
 	Software RAID 10 using mdadm + LVM
-    Disk: capacity, RPM, controller cache size
+Hitachi Deskstar P7K500 Hitachi HDP725050GLA360
+Hitachi Deskstar 7K1000.C Hitachi HDS721050CLA362
+Hitachi Deskstar P7K500
+Hitachi Deskstar P7K500
+Hitachi Deskstar P7K500
+
+7200 RPM, 16 Mo of cache and 500Go each
 
 \subsection{Network}
     Network card speed
 
 \subsection{Operating System}
     Operating system (including version/release) 
+SunOS solaris1 5.11 11.0 i86pc i386 i86pc
+
+                           Oracle Solaris 11 11/11 X86
+  Copyright (c) 1983, 2011, Oracle and/or its affiliates.  All rights reserved.
+                            Assembled 18 October 2011
+
