format changed for machine-description.tex
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -2,61 +2,56 @@
 
 \subsection{Processor}
 
-  	Two i386 processor operate at 3300 MHz on the virtual machine
-
-
-	vendor_id			: GenuineIntel
-	cpu family			: 6
-	model				: 42
-	model name			: Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz
-	stepping			: 7
-	cpu MHz			: 3300.152
-	cache size			: 6144 KB
-	cpuid level		: 13
-	L1 cache			: 64 KB
-	L2 cache			: 256 KB
-	L3 cache			: 6 MB
-	Data cache			: 32 KB
-	Instruction cache	: 32 KB
-	bogomips			: 6600.30
-	clflush size		: 64
-	cache_alignment		: 64
-	address sizes		: 36 bits physical, 48 bits virtual
-
-
+\begin{verbatim}
+Two i386 processor operate at 3300 MHz on the virtual machine. 
+number of processors  : 4
+vendor_id             : GenuineIntel
+cpu family            : 6
+model                 : 42
+model name            : Intel(R) Core(TM) i5-2500 CPU @ 3.30GHz
+cpu MHz               : 3300.152
+cpuid level           : 13
+L1 cache              : 64 KB
+L2 cache              : 256 KB
+L3 cache              : 6 MB
+data cache            : 32 KB
+instruction cache     : 32 KB
+bogomips              : 6600.30
+clflush size          : 64
+cache_alignment       : 64
+address sizes         : 36 bits physical, 48 bits virtual
+\end{verbatim}
 
 \subsection{Motherboard buses}
-	Intel Q67 Express Chipset
-
-
-Mother board is Intel DQ67OW
+	Intel Q67 Express Chipset\\
+	Mother board is Intel DQ67OW\\
 \footnote{http://www.intel.com/content/www/us/en/motherboards/desktop-motherboards/desktop-board-dq67ow.html}
-Chipset is Intel® Q67 Express Chipset \footnote{http://www.intel.com/content/www/us/en/chipsets/mainstream-chipsets/q67-express-chipset.html}
-    Memory bus
-    I/O bus
+	Chipset is Intel® Q67 Express Chipset\\ \footnote{http://www.intel.com/content/www/us/en/chipsets/mainstream-chipsets/q67-express-chipset.html}
+    	Memory bus\\
+	I/O bus\\
 
 \subsection{Ram}
-	16Go Physical
-    RAM size
+	16Go Physical\\
+    	RAM size\\
 
 \subsection{Disk}
-	Software RAID 10 using mdadm + LVM
-Hitachi Deskstar P7K500 Hitachi HDP725050GLA360
-Hitachi Deskstar 7K1000.C Hitachi HDS721050CLA362
-Hitachi Deskstar P7K500
-Hitachi Deskstar P7K500
-Hitachi Deskstar P7K500
+	Software RAID 10 using mdadm + LVM\\
+Hitachi Deskstar P7K500 Hitachi HDP725050GLA360\\
+Hitachi Deskstar 7K1000.C Hitachi HDS721050CLA362\\
+Hitachi Deskstar P7K500\\
+Hitachi Deskstar P7K500\\
+Hitachi Deskstar P7K500\\
 
-7200 RPM, 16 Mo of cache and 500Go each
+7200 RPM, 16 Mo of cache and 500Go each\\
 
 \subsection{Network}
-    Network card speed
+    Network card speed\\
 
 \subsection{Operating System}
-    Operating system (including version/release) 
-SunOS solaris1 5.11 11.0 i86pc i386 i86pc
+    Operating system (including version/release) \\
+SunOS solaris1 5.11 11.0 i86pc i386 i86pc\\
 
-                           Oracle Solaris 11 11/11 X86
-  Copyright (c) 1983, 2011, Oracle and/or its affiliates.  All rights reserved.
+                           Oracle Solaris 11 11/11 X86\\
+  Copyright (c) 1983, 2011, Oracle and/or its affiliates.  All rights reserved.\\
                             Assembled 18 October 2011
 
