finer version of machine-description.tex
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/machine-description.tex
+++ b/report/src/machine-description.tex
@@ -24,25 +24,23 @@ address sizes         : 36 bits physical, 48 bits virtual
 
 \subsection{Motherboard buses}
 	Intel Q67 Express Chipset\\
-	Mother board is Intel DQ67OW\\
-\footnote{http://www.intel.com/content/www/us/en/motherboards/desktop-motherboards/desktop-board-dq67ow.html}
-	Chipset is Intel® Q67 Express Chipset\\ \footnote{http://www.intel.com/content/www/us/en/chipsets/mainstream-chipsets/q67-express-chipset.html}
+	Mother board is Intel DQ67OW
+\footnote{http://www.intel.com/content/www/us/en/motherboards/desktop-motherboards/desktop-board-dq67ow.html}\\
+	Chipset is Intel® Q67 Express Chipset \footnote{http://www.intel.com/content/www/us/en/chipsets/mainstream-chipsets/q67-express-chipset.html}\\
     	Memory bus\\
 	I/O bus\\
 
 \subsection{Ram}
-	16Go Physical\\
-    	RAM size\\
+	16GB Physical RAM size\\
 
 \subsection{Disk}
 	Software RAID 10 using mdadm + LVM\\
-Hitachi Deskstar P7K500 Hitachi HDP725050GLA360\\
+Hitachi Deskstar P7K500 \\
+Hitachi Deskstar P7K500\\
+Hitachi Deskstar P7K500\\
+Hitachi Deskstar P7K500 Hitachi HDP725050GLA360 \\
 Hitachi Deskstar 7K1000.C Hitachi HDS721050CLA362\\
-Hitachi Deskstar P7K500\\
-Hitachi Deskstar P7K500\\
-Hitachi Deskstar P7K500\\
-
-7200 RPM, 16 Mo of cache and 500Go each\\
+7200 RPM, 16 MB of cache and 500GB each
 
 \subsection{Network}
     Network card speed\\
