introduction first draft
Signed-off-by: normanwu <normanwu1990@gmail.com>

--- a/report/src/introduction.tex
+++ b/report/src/introduction.tex
@@ -1,3 +1,4 @@
 \section{Introduction}
 
 
+Nowadays, one of the most common operating system researchs are laying emphesis on improving the performance of existing systems. It is important for us to understand how to measure the performance of a certain system. We are going to conduct quite a lot of experiments on SunOS 5.11 which forms the core of Solaris 11 system. We will cover different aspects of the system includes CPU, RAM, disk, network, file system, etc using benchmarks.By doing this project, we are expecting to get an intuite of the peroformance for varies basic operations as well as the detailed implementation idea for operating systems.
