Split of the ram part

--- a/report/src/experiments.tex
+++ b/report/src/experiments.tex
@@ -21,41 +21,5 @@ The fact thread creation without caching is taking way longer time than the one 
 
 \subsubsection{Context switch time}
 
-
-
-
-\subsection{Random Access Memory}
-
-\subsubsection{RAM access time}
-We measured the back-to-back-load RAM access latency.
-
-
-
-
-\subsubsection{RAM bandwidth}
-
-
-
-
-
-
-\subsubsection{Page fault service time}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+\input{ram}
 
