--- a/report/src/ram.tex
+++ b/report/src/ram.tex
@@ -6,7 +6,7 @@ We expected to see the RAM access time increases as it goes from L1, L2 to main 
 1. iteration of the first 32KB data or less (fit into L1 cache)
 2. iteration of the first 288KB data or less (fit into L1+L2 cache)
 3. iteration of all the whole array(doesn’t fit into caches).
-The result we got from our measurement shown that //TODO
+The result we got from our measurement shown that //TODO actual result
 
 
 
