--- a/report/src/introduction.tex
+++ b/report/src/introduction.tex
@@ -1,4 +1,15 @@
 \section{Introduction}
 
-
-Nowadays, one of the most common operating system researchs are laying emphesis on improving the performance of existing systems. It is important for us to understand how to measure the performance of a certain system. We are going to conduct quite a lot of experiments on SunOS 5.11 which forms the core of Solaris 11 system. We will cover different aspects of the system includes CPU, RAM, disk, network, file system, etc using benchmarks.By doing this project, we are expecting to get an intuite of the peroformance for varies basic operations as well as the detailed implementation idea for operating systems.
+Nowadays, one of the most common operating system researchs are laying emphesis on improving the performance of existing systems.
+It is important for us to understand how to measure the performance of a certain system.
+We are going to conduct our experiments on a virtual machine running the Solaris
+11 operating system.
+We will discuss different performance aspects of the system including CPU, RAM, disk,
+network, file system and benchmark them.
+By doing this project, we are expecting to get an intuite of the peroformance for varies basic operations as well as the detailed implementation idea for operating systems.
+Our measurement will be done with a tool written in C.
+We are using \emph{the GNU Compiler Collection} (gcc) version 4.5.2 as
+compiler.
+The only option which is used at compilation time is '-O0' which stands for "do
+not optimize"
+At this time we spent 20 hours working on the project each.
