--- a/report/src/introduction.tex
+++ b/report/src/introduction.tex
@@ -1,12 +1,13 @@
 \section{Introduction}
 
-Nowadays, one of the most common operating system researchs are laying emphesis on improving the performance of existing systems.
+Nowadays, common operating system researchs are laying emphesis on improving the performance of existing systems.
 It is important for us to understand how to measure the performance of a certain system.
-We are going to conduct our experiments on a virtual machine running the Solaris
-11 operating system.
+We are going to conduct our experiments on a virtual machine running the \emph{Oracle Solaris
+11} operating system.
 We will discuss different performance aspects of the system including CPU, RAM, disk,
 network, file system and benchmark them.
-By doing this project, we are expecting to get an intuite of the peroformance for varies basic operations as well as the detailed implementation idea for operating systems.
+By doing this project, we are expecting to get an intuite of the performance for
+vary basic operations as well as the detailed implementation idea for operating systems.
 Our measurement will be done with a tool written in C.
 We are using \emph{the GNU Compiler Collection} (gcc) version 4.5.2 as
 compiler.
