--- a/report/src/system-measurement-project.tex
+++ b/report/src/system-measurement-project.tex
@@ -55,7 +55,7 @@ Yann Léger}
 \maketitle
 \input{introduction}
 \input{machine-description}
-\input{experiments}
+\include{experiments}
 \input{references}
 
 \end{document}
